--- a/src/css/actualidad.css
+++ b/src/css/actualidad.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f5f7f9;
   color: #333;
-  padding: 20px;
+  /*padding: 20px;*/
   line-height: 1.6;
 }
 
