--- a/src/css/creadoras.css
+++ b/src/css/creadoras.css
@@ -100,6 +100,10 @@ h2 {
   width: 160px;
   height: auto;
 }
+.irinapicture{
+  width: 160px;
+  height: auto;
+}
 .linkpicture {
     width: 50px;
     height: 50px;
