add valentina info

--- a/src/css/creadoras.css
+++ b/src/css/creadoras.css
@@ -108,6 +108,10 @@ h2 {
   width: 160px;
   height: auto;
 }
+.valentinapicture {
+  width: 110px;
+  height: auto;
+}
 .linkpicture {
     width: 50px;
     height: 50px;
