--- a/src/css/mi-importancia.css
+++ b/src/css/mi-importancia.css
@@ -83,20 +83,38 @@ body {
 
 /* ------------------------- fin de la section soy vital --------------------- */
 /* Imagen principal */
+.super-potasio {
+  position: relative;
+  width: 100%;
+  padding: 40px 0 0 0; /* quitamos padding bottom para evitar espacio extra */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 #imagen-disparadora {
   width: 300px;
   cursor: pointer;
-  transition: transform 0.3s ease;
   border-radius: 20px;
   animation: palpitar 1.5s infinite ease-in-out, resplandor 2s infinite ease-in-out;
+  border: solid black;
+  position: relative;
+  z-index: 10; /* para que esté encima de la franja */
+  margin-bottom: -3cm; /* "subimos" la imagen para que quede sobre la franja */
+  background: white; /* para que no se vea el borde transparente si es png */
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2); /* opcional para que destaque más */
 }
 
-.super-potasio{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 40px 0;
+.yellow-line {
+  width: 100%;
+  height: 3cm;
+  background-color: #fff7b3;
+  border-radius: 0 0 20px 20px;
+  position: relative;
+  z-index: 5;
 }
+
 
 #imagen-disparadora:hover {
   transform: scale(1.05);
@@ -113,10 +131,10 @@ body {
 
 @keyframes resplandor {
   0%, 100% {
-    box-shadow: 0 0 20px #a2ea85, 0 0 30px #6ecb7a;
+    box-shadow: 0 0 20px black;
   }
   50% {
-    box-shadow: 0 0 50px yellow, 0 0 60px #5ed893;
+    box-shadow: 0 0 px black;
   }
 }
 
@@ -157,11 +175,18 @@ body {
   transform: scale(1.2);
 }
 
+.super-contenido {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
+}
+
 
 /* -----------------  inicio del cuestionario ---------------*/
 
 
-.evaluacion-potasio {
+.potasio-test {
   background: #f88c8c7e;
   padding: 40px;
   border-radius: 12px;
@@ -173,7 +198,7 @@ body {
 }
 
 
-.evaluacion-potasio h2 {
+.potasio-test h2 {
   font-size: 1.8rem;
   color: #f7f9f7;
   margin-bottom: 20px;
@@ -190,7 +215,7 @@ fieldset.pregunta.activa {
   display: block; /* Solo la activa se ve */
 }
 
-.evaluacion-potasio form {
+.potasio-test form {
   display: flex;
   flex-direction: column;
   gap: 30px;
