--- a/src/css/curiosidades.css
+++ b/src/css/curiosidades.css
@@ -185,6 +185,23 @@ button {
     min-width: 280px;
     line-height: 1.6;
 }
+.back-to-table {
+  display: block;
+  margin: 1.5rem auto 0;
+  font-size: 2.5rem; 
+  color: #f88c8c7e; 
+  font-weight: 900; 
+  width: fit-content;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  text-decoration: none;
+  margin-bottom: 2rem;
+}
+
+.back-to-table:hover {
+  color: #43cf63; 
+}
+
 @keyframes showModal {
     from {
         opacity: 0;
