--- a/src/css/creadoras.css
+++ b/src/css/creadoras.css
@@ -139,6 +139,22 @@ h2 {
     justify-content: center;
     align-items: center;
 }
+.back-to-table {
+  display: block;
+  margin: 1.5rem auto 0;
+  font-size: 2.5rem; 
+  color: #f88c8c7e; 
+  font-weight: 900; 
+  width: fit-content;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  text-decoration: none;
+  margin-bottom: 2rem;
+}
+
+.back-to-table:hover {
+  color: #43cf63; /* rosa más oscuro al pasar el mouse */
+}
 @media (max-width: 1200px) {
   .cards-container {
     grid-template-columns: repeat(3, 1fr);
