--- a/src/css/donde-estoy.css
+++ b/src/css/donde-estoy.css
@@ -221,6 +221,25 @@ h4 {
     content: "-   ";
 }
 
+/* flecha de volver a la tabla periodica  */
+
+.back-to-table {
+  display: block;
+  margin: 1.5rem auto 0;
+  font-size: 2.5rem; 
+  color: #f88c8c7e; 
+  font-weight: 900; /* para que la flecha se vea gruesa */
+  width: fit-content;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  text-decoration: none;
+  margin-bottom: 2rem;
+}
+
+.back-to-table:hover {
+  color: #43cf63; /* rosa más oscuro al pasar el mouse */
+}
+
 /* RESPONSIVE DESIGN */
 
 @media only screen and (max-width: 1200px) {
