flecha de tabla periodica lista

--- a/src/css/actualidad.css
+++ b/src/css/actualidad.css
@@ -396,3 +396,19 @@ canvas#confeti {
     background-color: darkorange;
     transform: scale(1.05);
   }
+
+  .back-to-table {
+  display: block;
+  margin: 1.5rem auto 0;
+  font-size: 2.5rem; 
+  color: #f88c8c7e; 
+  font-weight: 900; 
+  width: fit-content;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  text-decoration: none;
+  margin-bottom: 2rem;
+}
+
+.back-to-table:hover {
+  color: #43cf63;
