--- a/src/css/style-index.css
+++ b/src/css/style-index.css
@@ -84,3 +84,20 @@ ul.opciones li:hover {
   height: 120px;
   width: 120px;
 }
+
+.back-to-table {
+  display: block;
+  margin: 1.5rem auto 0;
+  font-size: 2.5rem; 
+  color: #f88c8c7e; 
+  font-weight: 900; 
+  width: fit-content;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  text-decoration: none;
+  margin-bottom: 2rem;
+}
+
+.back-to-table:hover {
+  color: #43cf63; 
+}
