--- a/src/css/juego-actualidad.css
+++ b/src/css/juego-actualidad.css
@@ -100,3 +100,20 @@ body {
       max-width: 400px;
       user-select: none;
     }
+
+    .back-to-table {
+  display: block;
+  margin: 1.5rem auto 0;
+  font-size: 2.5rem; 
+  color: #ffb3007e; 
+  font-weight: 900; 
+  width: fit-content;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  text-decoration: none;
+  margin-bottom: 2rem;
+}
+
+.back-to-table:hover {
+  color: #000000; 
+}
